# gentriduck

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: data-analyst.md  data-engineer-reviewer.md  data-engineer.md  gentrification-domain-expert.md  geo-data-scientist.md  project-manager.md  system-architect.md
.claude/skills/de-implement/: SKILL.md
.claude/skills/de-review/: SKILL.md
analysis/: a6_hotspots.py  a6_maup.py  a9_spatial_dynamic.py  backtest_index.py  e1_regressions.py  e2_classification.py  e3_maps.py  e3_narratives.py
docs/: PROJECT_PLAN.md
docs/adr/: 0001-stack-and-monorepo-architecture.md  0002-osm-poi-history-sourcing.md  0003-berlin-geographies-and-open-price-rent-sources.md  0004-data-governance-and-index-definition.md  0005-city-agnostic-data-model.md  0006-berlin-mss-data-source.md  0007-berlin-ses-indicators.md  0008-multi-dimensional-gentrification-model.md  0009-agent-skill-tooling-superpowers.md  0010-spatial-distance-weighting.md  0011-autonomous-merge-develop-branch.md  0012-serving-and-hosting-stack.md  0013-whitepaper-authoring-tool.md  0014-hamburg-data-sources.md  README.md
docs/assessment/: 2018-thesis-critical-assessment.md  2026-06-19-pm-architect-review.md
docs/assessment/tickets/: A1-reground-index.md  A10-causal-early-warning.md  A2-fix-e1-e2-validation.md  A3-ingest-mss.md  A4-ses-indicators.md  A5-ewr-semantics-audit.md  A6-spatial-weighting.md  A7-conceptual-model-adr.md  A8-longitudinal-trajectories.md  B2-backtest-harness.md  (+11 more)
docs/data/: kaufFaelle-discovery.md  price-rent-coverage.md
docs/epic-b/: B0-input-inventory.md  B2-B4-progress.md  B5-findings-check.md  B6-methodology-signoff.md  B7-domain-signoff.md  B7-geo-signoff.md  B9-domain-signoff.md  B9-geo-signoff.md
docs/epic-c/: C3-crosswalk-geo-signoff.md  C3-geo-signoff.md  C4-geo-signoff.md  C5-geo-signoff.md  C6-geo-signoff.md
docs/epic-d/: d1b-kauffaelle-domain-signoff.md  d1b-kauffaelle-geo-signoff.md  d2-price-rent-coverage.md  d3-price-rent-domain-signoff.md  d3-price-rent-geo-signoff.md
docs/epic-e/: B10-domain-signoff.md  B10-geo-signoff.md  E1-E2-geo-signoff.md  E1-regression-findings.md  E2-classification-findings.md  E3-domain-signoff.md  E3-findings.md  E3-geo-signoff.md  R-A2-domain-signoff.md  R-A2-geo-signoff.md
docs/epic-g/: G2-domain-signoff.md  G2-geo-signoff.md  G2-public-methodology-page.md  G3-attribution-licensing.md  G3-privacy-ethics.md  O4-milestone-B-narrative.md
docs/epic-h/: H1-condition1-closeout.md  H1-domain-signoff.md  H1-geo-signoff.md  H1-hamburg-data-landscape.md
docs/handoff/: 2026-06-17-bootstrap.md  2026-06-17-c3b-ewr-series.md  2026-06-18-c3b-ewr-series.md  2026-06-18-c3fix-c3-d1.md  2026-06-18-overnight-bugs-wiring.md  2026-06-18-overnight.md  2026-06-19-c1-osm-history-ingestion.md  2026-06-19-c4-delivered.md  2026-06-19-overnight-c5-e1-e2.md  2026-06-19-overnight-session2.md  2026-06-19-overnight-session3.md  2026-06-19-overnight.md  2026-06-19-pm-review.md  2026-06-20-overnight.md  state.json
docs/lessons/: local-first-data-presence.md
docs/method/: README.md  operating-model.md  retrospective.md
docs/methodology/: ADR-0010-geo-signoff.md  R-A1-domain-signoff.md  R-A1-geo-signoff.md  R-A3-domain-signoff.md  R-A3-geo-signoff.md  R-A4-domain-signoff.md  R-A4-geo-signoff.md  R-A5-domain-signoff.md  R-A5-geo-signoff.md  R-A7-domain-signoff.md  R-A7-geo-signoff.md  R-A8-domain-signoff.md  R-A8-geo-signoff.md  R-A9-domain-signoff.md  R-A9-geo-signoff.md  R-B2-domain-signoff.md  R-B2-geo-signoff.md  backtest.md  index-definition-domain-draft.md  index-definition-geo-draft.md  index-definition.md  indicator-semantics.md  spatial-methods-domain-signoff.md  spatial-methods.md
docs/milestone/: 2026-Q2-gentriduck-milestone.md
ingestion/: README.md
ingestion/berlin/: __init__.py
ops/: README.md  gentriduck-devmode.sh
reference/: README.md  poi_mapping.csv
reference/goldens/: 20180909_result_full_bzr.csv
reference/system/: 10_DQ_probs.sql  10_staging_osm.sql  20_transform_osm_poi.sql  25_transform_poi_mapping.sql  30_osm_poi_changed.sql  35_osm_poi_state_basis.sql  36_osm_poi_state_changed_special.sql  37_osm_poi_state_changed_del.sql  38_osm_poi_state.sql  40_osm_poi_features_domain.sql  41_osm_poi_features_category.sql  42_osm_poi_features_type.sql  45_osm_poi_features_domain_piv.sql  45_osm_poi_features_domain_piv_bzr.sql  45_osm_poi_features_domain_piv_distcalc.sql  45_osm_poi_features_domain_piv_distcalc_bzr.sql  46_osm_poi_features_category_piv.sql  46_osm_poi_features_category_piv_bzr.sql  46_osm_poi_features_category_piv_distcalc.sql  46_osm_poi_features_category_piv_distcalc_bzr.sql  47_osm_poi_features_type_piv.sql  47_osm_poi_features_type_piv_bzr.sql  47_osm_poi_features_type_piv_distcalc.sql  47_osm_poi_features_type_piv_distcalc_bzr.sql  50_lor_ewr_data.sql  50_lor_mss_idx_bzr_idx.sql  50_lor_mss_idx_bzr_z.sql  50_poi_features_osm.sql  51_lor_ewr_einwohnergewichtet.sql  51_lor_ewr_einwohnergewichtet_bzr.sql  60_lor_own_idx.sql  61_lor_own_idx_bzr.sql  70_oa_helper.sql  70_oa_helper_disctcalc.sql  71_oa.sql  71_oa_bzr.sql  71_oa_distcalc.sql  80_result_full_distcalc_plr.sql  80_result_full_plr.sql  80_result_h1_plr.sql  (+8 more)
transform/: dbt_project.yml  profiles.yml
transform/seeds/: berlin_mietspiegel.csv  berlin_mietspiegel_2024.csv  berlin_mietspiegel_2024_methodology.md  schema.yml  seed_dim_area_level.csv  seed_dim_city.csv  seed_ewr_indicator_meta.csv  seed_gentrification_ground_truth.csv  seed_lor_crosswalk_2006_to_2021.csv  seed_mss_expected_counts.csv  seed_poi_canonical_category.csv  seed_poi_mapping.csv  seed_poi_tag_drift.csv
transform/tests/: test_c5_poi_count_drop.sql  test_c5_poi_share_spike.sql  test_dynamik_ordering_guard.sql  test_hamburg_gebiet_stadtteil_crosswalk_match_rate.sql  test_lor_crosswalk_population_conservation.sql  test_mss_gesamtindex_consistency.sql  test_mss_indicators_edition_vocab.sql  test_mss_plr_row_count.sql
(+56 files in other folders)
