[project]
name = "gentriduck"
version = "0.1.0"
description = "Reviving a 2018 Berlin gentrification thesis on dbt + DuckDB; growing into a public open-data stats website."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "dbt-duckdb>=1.9",
    "duckdb>=1.1",
    "pandas>=2.2",
    "pyarrow>=14",
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "quackosm>=0.11",
    "osmium>=4.0",
    "shapely>=2.0",
    "certifi>=2024.0",
]

# Dev tooling lives in an isolated group; installed via `uv sync`.
[dependency-groups]
dev = [
    "poethepoet>=0.29",
    "shandy-sqlfmt>=0.23",
    "sqlfluff>=3.2",
    "ruff>=0.7",
    "pre-commit>=4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", "transform/dbt_packages", "transform/target"]

[tool.sqlfmt]
# Exclude generated dbt artefacts; sqlfmt owns source models only.
exclude = ["transform/target/**", "transform/dbt_packages/**"]

# Cross-platform task runner — identical commands on macOS / Windows / Linux.
# dbt always runs against the project in transform/ with a repo-local profile.
[tool.poe.tasks]
debug = "dbt debug --project-dir transform --profiles-dir transform"
deps  = "dbt deps --project-dir transform"
build = "dbt build --project-dir transform --profiles-dir transform"
test  = "dbt test --project-dir transform --profiles-dir transform"
docs  = "dbt docs generate --project-dir transform --profiles-dir transform"
fmt   = { sequence = ["ruff format .", "sqlfmt transform"], default_item_type = "cmd" }
lint  = { sequence = ["ruff check .", "sqlfluff lint transform"], default_item_type = "cmd" }
